Customized base setup for ultra simple blog project.

--- a/ultrasimpleblog-project/templates/base.html
+++ b/ultrasimpleblog-project/templates/base.html
@@ -6,7 +6,7 @@
     xml:lang="{% firstof LANGUAGE_CODE 'en' %}"
     lang="{% firstof LANGUAGE_CODE 'en' %}">
   <head>
-    <title>{% block title %}{% endblock %} - Nonrel-testapp</title>
+    <title>{% block title %}{% endblock %} - Ultra Simple Blog</title>
 
     {% block css %}
     {% endblock %}
@@ -19,7 +19,7 @@
 
   <body>
     <div id="header">
-      <a id="logo" href="/">Nonrel-testapp</a>
+      <a id="logo" href="/">Ultra Simple Blog</a>
     </div>
 
     <div class="columns">
@@ -44,7 +44,6 @@
     </div>
 
     <div id="footer">
-      <p>Powered by <a href="http://www.allbuttonspressed.com/projects/django-nonrel">Django-nonrel</a></p>
     </div>
 
     {% block js %}
