Removed unnecessary file and other cleanup.

--- a/ultrasimpleblog-project/templates/base.html
+++ b/ultrasimpleblog-project/templates/base.html
@@ -20,6 +20,7 @@
     {% endblock %}
 
     {% block extra-head %}{% endblock %}
+    <!-- This template is based on the allbuttonspressed testapp. -->
   </head>
 
   <body>
