--- a/ultrasimpleblog-project/templates/base.html
+++ b/ultrasimpleblog-project/templates/base.html
@@ -15,6 +15,7 @@
     <script src="{{ STATIC_URL }}uni_form/uni-form.jquery.js" type="text/javascript"></script>
     <link rel="stylesheet" href="{{ STATIC_URL }}uni_form/uni-form.css" type="text/css" />
     <link rel="stylesheet" href="{{ STATIC_URL }}uni_form/default.uni-form.css" type="text/css" />
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" />
     
     {% block preload_js %}
     {% endblock %}
