Add a 'home' link for better navigation.

--- a/ultrasimpleblog-project/templates/base.html
+++ b/ultrasimpleblog-project/templates/base.html
@@ -26,14 +26,15 @@
 
   <body>
     <div id="header">
-        <h1><a id="logo" href="/">Ultra Simple Blog</a></h1>
+        <h1><a id="logo" href="{% url article_index %}">Ultra Simple Blog</a></h1>
       <div class="controls">
+      Goto: <a href="{% url article_index %}">Home</a>
       {% if request.user.is_authenticated %}
-      Goto: <a href="{% url article_unpublished_index %}">Unpublished</a>
+      | <a href="{% url article_unpublished_index %}">Unpublished</a>
       | <a href="{% url article_new %}">New</a>
       | <a href="{% url logout %}">Logout</a>
       {% else %}
-      Goto: <a href="{% url login %}">Login</a>
+      | <a href="{% url login %}">Login</a>
       {% endif %}
       </div>
       <hr />
