--- a/ultrasimpleblog-project/templates/base.html
+++ b/ultrasimpleblog-project/templates/base.html
@@ -32,6 +32,7 @@
       {% if request.user.is_authenticated %}
       | <a href="{% url article_unpublished_index %}">Unpublished</a>
       | <a href="{% url article_new %}">New</a>
+      | <a href="{% url admin:index %}">Admin</a>
       | <a href="{% url logout %}">Logout</a>
       {% else %}
       | <a href="{% url login %}">Login</a>
