--- a/ultrasimpleblog-project/templates/blog/article_form.html
+++ b/ultrasimpleblog-project/templates/blog/article_form.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 <div class="article">
+    <p><i>You can use markdown syntax in the content field.</i></p>
     <form action="{{ request.path_info }}" method="post">
         {{ form|as_uni_form }}
         <input type="submit" value="submit"/> 
