--- a/ultrasimpleblog-project/templates/blog/article_list.html
+++ b/ultrasimpleblog-project/templates/blog/article_list.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% load markup %}
+{% load oembed_tags %}
 
 {% block content %}
 {% for article in article_list %}
@@ -16,7 +17,9 @@
     </div>
     {% include "blog/_article_controls" %}
     <div class="article-body">
+        {% oembed %}
         {{ article.content|markdown }}
+        {% endoembed %}
     </div>
 </div>
 <hr/>
