--- a/ultrasimpleblog-project/templates/blog/article_list.html
+++ b/ultrasimpleblog-project/templates/blog/article_list.html
@@ -18,7 +18,7 @@
     {% include "blog/_article_controls" %}
     <div class="article-body">
         {% oembed %}
-        {{ article.content|markdown }}
+        {{ article.content|markdown:"safe" }}
         {% endoembed %}
     </div>
 </div>
